Fixes unsightly wrapping on navigation tabs in Mavericks/Chrome.

--- a/views/shared/css/stylus/editor/editor.styl
+++ b/views/shared/css/stylus/editor/editor.styl
@@ -27,4 +27,5 @@ body
 #editor
   width $editorWidth
   padding $editorPadding
+  overflow-y scroll
   overflow-x hidden
