--- a/views/shared/css/stylus/editor/overrides/bootstrap.styl
+++ b/views/shared/css/stylus/editor/overrides/bootstrap.styl
@@ -16,7 +16,7 @@
   border-radius 2px
 
 ul.nav a
-  padding 5px 10px
+  padding 5px 8px
 
 .form-control
   box-shadow none
